--- a/packages/ui/src/ui/icon/icon.module.css
+++ b/packages/ui/src/ui/icon/icon.module.css
@@ -1,16 +1,25 @@
 .root {
   display: inline-block;
-  min-height: var(--space-small);
 }
 
 .icon {
   display: block;
-  width: var(--space-small);
-  height: auto;
-  max-height: var(--space-small);
+  width: 100%;
+  height: 100%;
 }
 
-.text {
-  line-height: 1.3;
-  vertical-align: middle;
+/** Size variation */
+.small {
+  width: var(--space-xsmall);
+  height: var(--space-xsmall);
+}
+
+.medium {
+  width: var(--space-small);
+  height: var(--space-small);
+}
+
+.large {
+  width: var(--space-medium);
+  height: var(--space-medium);
 }
